--- a/packages/client/public/locales/ru/Settings.json
+++ b/packages/client/public/locales/ru/Settings.json
@@ -70,6 +70,7 @@
   "CommonFilesDescription": "Для файлов в разделе \"Общие\" будет создана отдельная комната (Общая комната). Только администраторы {{productName}} будут иметь доступ к этой комнате. По умолчанию владельцем комнаты будет пользователь, инициирующий импорт: {{user}} (Вы).",
   "CompanyInfoSettings": "Настройки информации о компании",
   "CompanyInfoSettingsDescription": "Эта информация будет отображаться в окне <1>{{link}}</1> .",
+  "CompanyNameTitle": "Ваш логотип будет использоваться в приглашениях и уведомлениях, отправляемых из вашего DocSpace на почту",
   "ConfirmEmailSended": "Письмо с подтверждением отправлено {{ownerName}}",
   "CustomDomainName": "Пользовательское доменное имя",
   "CustomDomains": "Пользовательские домены",
